--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,3 +1,32 @@
 <div class="field">
   <label>{{label}}</label>
+  <input [formControl]="control" />
+  <div *ngIf="showErrors()" class="ui pointing red basic label">
+    <p *ngIf="control.errors.required">
+      Value is required
+    </p>
+    <p *ngIf="control.errors.minlength">
+      Value you entered is 
+      {{ control.errors.minlength.actualLength }}
+      characters, it should be atleast 
+      {{ control.errors.minlength.requiredLength }}
+      characters long
+    </p>
+    <p *ngIf="control.errors.maxlength">
+      Value you entered is 
+      {{ control.errors.maxlength.actualLength }}
+      characters, it should be atleast 
+      {{ control.errors.maxlength.requiredLength }}
+      characters long
+    </p>
+    <p *ngIf="control.errors.pattern">
+      Invalid format
+    </p>
+    <p *ngIf="control.errors.nonUniqueUsername">
+      Username is taken
+    </p>
+    <p *ngIf="control.errors.offline">
+      Can't process information
+    </p>
+  </div>
 </div>
