--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <h3>Create an account</h3>
-<form class="ui form" [formGroup]="authForm">
+<form (ngSubmit)="onSubmit()" class="ui form" [formGroup]="authForm">
   
   <!-- <div class="field">
     <label>Username</label>
@@ -8,24 +8,26 @@
   <app-input
     label="Username"
     [control]="authForm.get('username')"
+    inputType="text"
   ></app-input>
-  {{ authForm.get("username").errors | json }}
-
-  <div class="field">
-    <label>Password</label>
-    <input formControlName="password"/>
-  </div>
-  {{ authForm.get("password").errors | json }}
-
-  <div class="field">
-    <label>Confirm Password</label>
-    <input formControlName="passwordConfirmation"/>
-  </div>
-  {{ authForm.get("passwordConfirmation").errors | json }}
-
+  <app-input
+    inputType="password"
+    label="Password"
+    [control]="authForm.get('password')"
+  ></app-input>
+  <app-input
+    inputType="password"
+    label="Password Confirmation"
+    [control]="authForm.get('passwordConfirmation')"
+  ></app-input>
   <button class="ui submit button primary">Submit</button>
 
-  {{ authForm.errors | json }}
+  <!-- {{ authForm.errors | json }} -->
+  <div *ngIf="authForm.errors && authForm.get('password').touched && authForm.get('passwordConfirmation').touched" class="ui red basic label">
+    <p *ngIf="authForm.errors.passwordsDontMatch">
+      Passwords don't match
+    </p>
+  </div>
 
 </form>
 <hr>
