--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -22,13 +22,17 @@
   ></app-input>
   <button class="ui submit button primary">Submit</button>
 
-  <!-- {{ authForm.errors | json }} -->
   <div *ngIf="authForm.errors && authForm.get('password').touched && authForm.get('passwordConfirmation').touched" class="ui red basic label">
     <p *ngIf="authForm.errors.passwordsDontMatch">
       Passwords don't match
     </p>
+    <p *ngIf="authForm.errors.noConnection">
+      No internet connection detected, failed to sign up
+    </p>
+    <p *ngIf="authForm.errors.unknownError">
+      Something went wrong, try again later
+    </p>
   </div>
-
 </form>
 <hr>
 <!-- DEBUG -->
