--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -1,3 +1,13 @@
-<p>
-  email-show works!
-</p>
+<div class="header" *ngIf="email">
+  <div>
+    <h3>{{ email.subject }}</h3>
+    <div>
+      From: <i>{{ email.from }}</i>
+    </div>
+    <div>
+      To: <i>{{ email.to }}</i>
+    </div>
+  </div>
+  <div class="ui divider"></div>
+  <div [innerHTML]="email.html"></div>
+</div>
